Change typeface to system (San Francisco) and fix layout bug for Journal text in title bar

--- a/src/theme/sass-partials/_typography.scss
+++ b/src/theme/sass-partials/_typography.scss
@@ -1,16 +1,16 @@
 
 .heavy-font-family {
-  font-family: "Roboto";
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Roboto";
   font-weight: 900;
 }
 
 .semibold-font-family {
-  font-family: "Roboto";
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Roboto";
   font-weight: 500;
 }
 
 .regular-font-family {
-  font-family: "Roboto";
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Roboto";
   font-weight: 400;
 };
 
